--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -18,9 +18,9 @@ table {
 	table-layout:fixed;
 	
 }
-table.time {
-	width:1000px;
-}
+//table.time {
+//	width:2000px;
+//}
 
 table.blockdetails{
 	width:1000px;
@@ -32,7 +32,7 @@ table, td, th {
 }
 
 th.time {
-width:170px;
+width:12em;
 }
 
 th {
@@ -46,6 +46,7 @@ th.th-colspan {
 }
 
 td {
+font-size: 1em;
     height: 10px;
     text-align: left;
     padding: 5px;
@@ -68,7 +69,8 @@ td.fract-part {
 	vertical-align: bottom;
 	border-left: 1px dotted gray;
 	padding-left: 0px;
-	font-size:smaller;
+//	font-size:smaller;
+	font-size:0.75em;
 	width:80px;
 }
 
